# Stock_Collect

./: .gitignore  README.md  makefile  pyproject.toml
stock_collect/: data_process.py  gmail_service.py  main.py  message.py
stock_collect/database/: database.py
stock_collect/fetch_data/: data_process.py  gmail_service.py
stock_collect/fetch_stock_data/: stock_price.py
stock_collect/fetch_trade_data/: data_process.py  message.py
tests/: stock_inventory.py  test_dividends.py  test_fetch_stock_data.py  test_main.py  test_parse_stock_data.py  test_view.py
